# openbook-desktop

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  build-all.sh  build.rs  main.dart.patch  openbook-desktop.sh
src/: logging.rs  main.rs  plugins.rs
src/plugins/: flutter_secure_storage.rs  path_provider.rs
src/plugins/flutter_secure_storage/: crypto.rs
