[package]
name = "openbook-desktop"
version = "0.1.0"
authors = ["Sophie Tauchert <999eagle@999eagle.moe>"]
edition = "2018"

[package.metadata.flutter]
version = "3757390fa4b00d2d261bfdf5182d2e87c9113ff9"

[dependencies]
flutter-engine = "0.2.0"

[build-dependencies]
flutter-download = "0.1.0"
cargo_toml = "0.6.4"
serde_derive = "1.0.89"
serde = "1.0.89"
